--- a/index.html
+++ b/index.html
@@ -13,6 +13,64 @@
     <div id="video-container"></div>
   </div>
   <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.17/dist/ffmpeg.min.js"></script>
-  <script src="script.js"></script>
+  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.17/dist/ffmpeg.min.js"></script>
+<script>
+  const { createFFmpeg, fetchFile } = FFmpeg;
+  const ffmpeg = createFFmpeg({ log: true });
+
+  const videoInput = document.getElementById("video-input");
+  const processBtn = document.getElementById("process-btn");
+  const videoContainer = document.getElementById("video-container");
+
+  videoInput.addEventListener("change", async () => {
+    if (videoInput.files.length === 0) return;
+    processBtn.disabled = false;
+  });
+
+  processBtn.addEventListener("click", async () => {
+    const file = videoInput.files[0];
+    if (!file) return;
+
+    processBtn.innerText = "处理中...";
+    processBtn.disabled = true;
+
+    if (!ffmpeg.isLoaded()) {
+      await ffmpeg.load();
+    }
+
+    ffmpeg.FS("writeFile", "input.mp4", await fetchFile(file));
+
+    // 模糊视频中间区域
+    await ffmpeg.run(
+      "-i",
+      "input.mp4",
+      "-vf",
+      "delogo=x=100:y=100:w=200:h=100:show=0",
+      "output.mp4"
+    );
+
+    const data = ffmpeg.FS("readFile", "output.mp4");
+    const videoURL = URL.createObjectURL(
+      new Blob([data.buffer], { type: "video/mp4" })
+    );
+
+    const video = document.createElement("video");
+    video.src = videoURL;
+    video.controls = true;
+
+    const download = document.createElement("a");
+    download.href = videoURL;
+    download.download = "去水印视频.mp4";
+    download.innerText = "下载去水印视频";
+
+    videoContainer.innerHTML = "";
+    videoContainer.appendChild(video);
+    videoContainer.appendChild(download);
+
+    processBtn.innerText = "开始去水印";
+  });
+</script>
+</body>
+</html>
 </body>
 </html>
